[package]
name = "rustenium-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hyper = "1.6.0"
http-body-util = "0.1.2"
hyper-util = "0.1.10"
ctrlc = "3.4.5"
regex = "1.11.1"
